name:                elm-bridge
version:             0.1.0.0
synopsis:            Derive Elm types from Haskell types
description:         Building the bridge from Haskell to Elm and back. Define types once,
                     use on both sides and enjoy easy (de)serialisation. Cheers!
homepage:            http://github.com/agrafix/derive-elm
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 Alexander Thiemann
category:            Web, Compiler, Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md
    examples/*.hs

library
  hs-source-dirs:      src
  exposed-modules:
                       Elm.Derive
                       Elm.Json
                       Elm.Module
                       Elm.TyRender
                       Elm.TyRep
  build-depends:       base >= 4.7 && < 5,
                       template-haskell
  default-language:    Haskell2010

test-suite derive-elm-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
                       Elm.DeriveSpec
                       Elm.TyRenderSpec
                       Elm.JsonSpec
                       Elm.TestHelpers
                       Elm.ModuleSpec
  build-depends:
                       base,
                       hspec >= 2.0,
                       elm-bridge
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/derive-elm
