name:                elm-bridge
version:             0.4.0
synopsis:            Derive Elm types from Haskell types
description:         Building the bridge from Haskell to Elm and back. Define types once,
                     use on both sides and enjoy easy (de)serialisation. Cheers!

                     This module only supports Elm 0.18. Version 0.3.* supports both Elm 0.16 and Elm 0.17.
homepage:            https://github.com/agrafix/elm-bridge
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>, Simon Marechal <bartavelle@gmail.com>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 - 2016 Alexander Thiemann and contributors
category:            Web, Compiler, Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md
    CHANGELOG.md
    examples/*.hs


library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
                       Elm.Derive
                       Elm.Json
                       Elm.Module
                       Elm.TyRender
                       Elm.TyRep
                       Elm.Versions
  other-modules:       Elm.Utils
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       aeson  >= 0.9
  default-language:    Haskell2010

test-suite end-to-end-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             EndToEnd.hs
  build-depends:       base,
                       elm-bridge,
                       aeson,
                       containers,
                       QuickCheck,
                       text
  default-language:    Haskell2010

test-suite derive-elm-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
                       Elm.DeriveSpec
                       Elm.TyRenderSpec
                       Elm.JsonSpec
                       Elm.ModuleSpec
  build-depends:
                       base,
                       hspec >= 2.0,
                       elm-bridge,
                       aeson,
                       containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/elm-bridge
