name:                elm-bridge
version:             0.8.4
synopsis:            Derive Elm types and Json code from Haskell types, using aeson's options
description:         Building the bridge from Haskell to Elm and back. Define types once,
                     and derive the aeson and elm functions at the same time, using any aeson
                     option you like. Cheers!
homepage:            https://github.com/agrafix/elm-bridge
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>, Simon Marechal <bartavelle@gmail.com>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 - 2016 Alexander Thiemann and contributors
category:            Web, Compiler, Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==9.0.1

extra-source-files:
    README.md
    CHANGELOG.md
    examples/*.hs


library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
                       Elm.Derive
                       Elm.Json
                       Elm.Module
                       Elm.TyRender
                       Elm.TyRep
                       Elm.Versions
  other-modules:       Elm.Utils
  build-depends:       base >= 4.15 && < 5,
                       template-haskell,
                       aeson  >= 1
  default-language:    Haskell2010

test-suite end-to-end-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             EndToEnd.hs
  build-depends:       base,
                       elm-bridge,
                       aeson,
                       containers,
                       QuickCheck,
                       text
  ghc-options:         -O0
  default-language:    Haskell2010

test-suite derive-elm-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
                       Elm.DeriveSpec
                       Elm.TyRenderSpec
                       Elm.JsonSpec
                       Elm.ModuleSpec
                       Elm.TyRepSpec
  build-depends:
                       base,
                       hspec >= 2.0,
                       elm-bridge,
                       aeson,
                       containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/elm-bridge
